# lab05HW

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
tests/: AccountTests.cpp  TransactionTests.cpp  test1.cpp
